welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: ';' expected but '=' found.
      T[i+k]= i
            ^